--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "vitae",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.15.3"
+  },
   "dependencies": {
     "bootstrap": "^4.4.1",
     "cra-template": "1.0.0",
